# Vaults

./: .gitignore  .gitmodules  .prettierignore  Anchor.toml  Cargo.toml  Makefile.toml  README.md  library-replace.sh  package.json
adapter/: Cargo.toml
adapter/src/: instructions.rs  lib.rs
docs/: concept.md  math.md  mockup.md  procedures.md  updates.md
lib-adapter/: Cargo.toml
lib-adapter/src/: lib.rs
lib-adapter/src/_shared/: context.rs  state.rs
lib-adapter/src/shared/: mod.rs  state.rs
programs/adapter-abi/: Cargo.toml
programs/adapter-abi/src/: constants.rs  contexts.rs  lib.rs  state.rs
programs/example-stake-adapter/: Cargo.toml
programs/example-stake-adapter/src/: contexts.rs  lib.rs  state.rs
programs/example-stake-adapter/src/instructions/: crank.rs  deposit.rs  edit_phase.rs  initialize.rs  mod.rs  redeem.rs
programs/lib-adapter/: Cargo.toml
programs/lib-adapter/src/: context.rs  instructions.rs  lib.rs  state.rs
programs/lib-adapter/src/shared/: context.rs  mod.rs
programs/marinade-stake-adapter/: Cargo.toml
programs/marinade-stake-adapter/src/: lib.rs  shared
programs/marinade-stake-adapter/src/instructions/: deposit.rs  mod.rs
programs/provider-staking/: Cargo.toml
programs/provider-staking/src/: lib.rs
programs/vaults/: Cargo.toml
programs/vaults/src/: adapter.rs  constants.rs  cpi.rs  cpis.rs  error.rs  lib.rs  math.rs  shared  state.rs
programs/vaults/src/instructions/: crank.rs  deposit.rs  edit_group.rs  edit_vault.rs  init_group.rs  init_vault.rs  mod.rs  redeem.rs  withdraw.rs
provider/: Cargo.toml
provider/src/: lib.rs
tests/: vaults.ts
