[package]
name = "marinade-stake-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_stake_adapter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
marinade-anchor-sdk = { version = "0.1.0", path = "../../external/marinade/libs/marinade-anchor-sdk" }
lib-adapter = { path = "../lib-adapter", features = ["cpi"] }