[package]
name = "vaults"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaults"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
solana-program = "1.15.1"
anchor-spl = "0.26.0"
cpi-interface = { version = "0.1.0", path = "../../external/cpi-interface" }
adapter-abi = { version = "0.1.0", path = "../adapter-abi", features = ["cpi"]}